versions/26.1.2/develop/blocks/block-entity-renderer.md
---
title: Block Entity Renderers
description: Learn how to spice rendering up with block entity renderers.
authors:
  - natri0
resources:
  https://docs.neoforged.net/docs/blockentities/ber/: BlockEntityRenderer - NeoForge Docs
---

Sometimes, using Minecraft's model format is not enough. If you need to add dynamic rendering to your block's visuals, you will need to use a `BlockEntityRenderer`.

For example, let's make the Counter Block from the [Block Entities article](../blocks/block-entities) show the number of clicks on its top side.

## Creating a BlockEntityRenderer {#creating-a-blockentityrenderer}

Block entity rendering uses a submit/render system where you first submit the data required to render an object to the screen, the game then renders the object using it's submitted state.

When creating a `BlockEntityRenderer` for the `CounterBlockEntity`, it's important to place the class in the appropriate source set, such as `src/client/`, if your project uses split source sets for client and server. Accessing rendering-related classes directly in the `src/main/` source set is not safe because those classes might be loaded on a server.

First, we need to create a `BlockEntityRenderState` for our `CounterBlockEntity` to hold the data that will be used for rendering. In this case, we will need the `clicks` to be available during rendering.

<<< @/reference/26.1.2/src/client/java/com/example/docs/rendering/blockentity/CounterBlockEntityRenderState.java#render_state

Then we create a `BlockEntityRenderer` for our `CounterBlockEntity`.

<<< @/reference/26.1.2/src/client/java/com/example/docs/rendering/blockentity/CounterBlockEntityRenderer.java#renderer_structure

The new class has a constructor with `BlockEntityRendererProvider.Context` as a parameter. The `Context` has a few useful rendering utilities, like the `ItemRenderer` or `Font`.
Also, by including a constructor like this, it becomes possible to use the constructor as the `BlockEntityRendererProvider` functional interface itself:

<<< @/reference/26.1.2/src/client/java/com/example/docs/ExampleModBlockEntityRenderer.java#register_block_entity_renderer

We will override a few methods to set up the render state along with the `submit` method where the rendering logic will be set up.

`createRenderState` can be used to initialize the render state.

<<< @/reference/26.1.2/src/client/java/com/example/docs/rendering/blockentity/CounterBlockEntityRenderer.java#create_render_state

`extractRenderState` can be used to update the render state with entity data.

<<< @/reference/26.1.2/src/client/java/com/example/docs/rendering/blockentity/CounterBlockEntityRenderer.java#extract_render_state

You should register block entity renderers in your `ClientModInitializer` class.

`BlockEntityRenderers` is a registry that maps each `BlockEntityType` with custom rendering code to its respective `BlockEntityRenderer`.

## Drawing on Blocks {#drawing-on-blocks}

Now that we have a renderer, we can draw. The `submit` method is called every frame, and it's where the rendering magic happens.

### Moving Around {#moving-around}

First, we need to offset and rotate the text so that it's on the block's top side.

::: info

As the name suggests, the `PoseStack` is a _stack_, meaning that you can push and pop transformations.
A good rule-of-thumb is to push a new one at the beginning of the `submit` method and pop it at the end, so that the rendering of one block doesn't affect others.

More information about the `PoseStack` can be found in the [Basic Rendering Concepts article](../rendering/basic-concepts).

:::

To make the translations and rotations needed easier to understand, let's visualize them. In this picture, the green block is where the text would be drawn, by default in the furthest bottom-left point of the block:

![Default rendering position](/assets/develop/blocks/block_entity_renderer_1.png)

So first we need to move the text halfway across the block on the X and Z axes, and then move it up to the top of the block on the Y axis:

![Green block in the topmost center point](/assets/develop/blocks/block_entity_renderer_2.png)

This is done with a single `translate` call:

<<< @/reference/26.1.2/src/client/java/com/example/docs/rendering/blockentity/CounterBlockEntityRenderer.java#translate

That's the _translation_ done, _rotation_ and _scale_ remain.

By default, the text is drawn on the XY plane, so we need to rotate it 90 degrees around the X axis to make it face upwards on the XZ plane:

![Green block in the topmost center point, facing upwards](/assets/develop/blocks/block_entity_renderer_3.png)

The `PoseStack` does not have a `rotate` function, instead we need to use `mulPose` and `Axis.XP`:

<<< @/reference/26.1.2/src/client/java/com/example/docs/rendering/blockentity/CounterBlockEntityRenderer.java#rotate

Now the text is in the correct position, but it's too large. The `BlockEntityRenderer` maps the whole block to a `[-0.5, 0.5]` cube, while a `Font` uses Y coordinates of `[0, 9]`. As such, we need to scale it down by a factor of 18:

<<< @/reference/26.1.2/src/client/java/com/example/docs/rendering/blockentity/CounterBlockEntityRenderer.java#scale

Now, the whole transformation looks like this:

<<< @/reference/26.1.2/src/client/java/com/example/docs/rendering/blockentity/CounterBlockEntityRenderer.java#transformations

### Drawing Text {#drawing-text}

As mentioned earlier, the `Context` passed into the constructor of our renderer has a `Font` that we can use to measure text (`width`), which is useful for centering.

To draw the text, we will be submitting the necessary data to the render queue. Since we're drawing some text, we can use the `submitText` method provided through the `SubmitNodeCollector` instance passed into the `submit` method.

<<< @/reference/26.1.2/src/client/java/com/example/docs/rendering/blockentity/CounterBlockEntityRenderer.java#drawing_text

The `submitText` method takes a lot of parameters, but the most important ones are:

- the `FormattedCharSequence` to draw;
- its `x` and `y` coordinates;
- the RGB `color` value;
- the `PoseStack` describing how it should be transformed.

And after all this work, here's the result:

![Counter Block with a number on top](/assets/develop/blocks/block_entity_renderer_4.png)
